add whitenoise module to handle static files on heroku

--- a/src/static/scss/blocks/_logo.scss
+++ b/src/static/scss/blocks/_logo.scss
@@ -15,11 +15,11 @@
     display: none;
   }
   @media #{$medium-up} {
-    background-image: url("../images/logo-tshape.png");
+    // background-image: url("../images/logo-tshape.png");
     background-size: 30px 34px;
   }
   @media #{$small-only} {
-    background-image: url("../../images/logo-tshape.png");
+    // background-image: url("../../images/logo-tshape.png");
     background-size: 30px 34px;
   }
   a {
